pushed the spotted updates for text changes and format issues

--- a/src/index.html
+++ b/src/index.html
@@ -273,10 +273,10 @@
                     The Delaware Cancer Registry Cancer Maps project aims to provide data for geographies beyond county-level statistics to better serve cancer control, public health, and policy efforts.
                 </p>
                 <p>
-                    Delaware Cancer Registry Cancer Maps allows users to interactively map health data for Delaware at a geographic level called zones, which are aggregates of census tracts. We have used a data-driven approach to define 14 zones for Delaware, based on similar characteristics (poverty, urbanicity, racial/ethnic minority composition) and a minimum of 50,000 residents. These areas are generally smaller than county, but larger than census tract. Zones vary in population size from 54,013 to 67,693 with the number of census tracts ranging from 8 to 23.
+                    Delaware Cancer Registry Cancer Maps allows users to interactively map health data for Delaware at a geographic level called zones, which are aggregates of census tracts. We have used a data-driven approach to define 15 zones for Delaware, based on similar characteristics (poverty, urbanicity, racial/ethnic minority composition) and a minimum of 50,000 residents. These areas are generally smaller than county, but larger than census tract. Zones vary in population size from 54,013 to 67,693 with the number of census tracts ranging from 8 to 23.
                 </p>
                 <p>
-                    Delaware Cancer Registry Cancer Maps include 5-year and 10-year cancer incidence rates based on the most current data for the 23 most common cancer sites by sex and race/ethnicity (non-Hispanic White, non-Hispanic Black, and Hispanic). It also includes selected population demographic data based on 2010 Census and 2012-2016 American Community Survey data. Cancer incidence rates will be updated annually as more current data become available.
+                    Delaware Cancer Registry Cancer Maps include 5-year and 10-year cancer incidence rates based on the most current data for the 23 most common invasive cancer sites and for all sites combined by sex and race/ethnicity (non-Hispanic White, non-Hispanic Black, and Hispanic). It also includes selected population demographic data based on 2010 Census and 2015-2019 American Community Survey data. Cancer incidence rates will be updated annually as more current data become available.
                 </p>
                 <p class="title">Project Team</p>
                 <p>
@@ -447,9 +447,8 @@
                     <span class="source">Sources:</span> 
                 </p>
                 <ul class="source">
-                    <li>1-year time period: American Community Survey, 2012-2016</li>
-                    <li>5-year time period: American Community Survey, 2012-2016</li>
-                    <li>10-year time period: American Community Survey, 2007-2011 and 2012-2016</li>
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
                 </ul>
                 <p>
                     <b>Confidence Interval:</b> A statistical measure of the precision of the observed incidence rate. The lower confidence interval (LCI) and upper confidence interval (UCI) provide a range within which the true rate is thought to be with 95% confidence. Rates based on larger numbers of cases are subject to less variation.
@@ -465,24 +464,22 @@
                     <span class="source">Sources:</span> 
                 </p>
                 <ul class="source">
-                    <li>1-year time period: American Community Survey, 2012-2016</li>
-                    <li>5-year time period: American Community Survey, 2012-2016</li>
-                    <li>10-year time period: American Community Survey, 2007-2011 and 2012-2016</li>
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
+                </ul>
+                <p>
+                    <b>% Foreign Born:</b> Percent of population that is foreign born<br>
+                    <span class="source">Sources:</span> 
+                </p>
+                <ul class="source">
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
                 </ul>
                 <p>
                     <b>Incidence:</b> The number of new cases of cancer diagnosed in the selected time period.
                 </p>
                 <p>
-                    <b>% Population with income below poverty:</b> Percent of the population with income below the federal poverty level.<br>
-                    <span class="source">Sources:</span> 
-                </p>
-                <ul class="source">
-                    <li>1-year time period: American Community Survey, 2012-2016</li>
-                    <li>5-year time period: American Community Survey, 2012-2016</li>
-                    <li>10-year time period: American Community Survey, 2007-2011 and 2012-2016</li>
-                </ul>
-                <p>
-                    <b>Race/Ethnicity:</b> [REPLACE/CONFIRM LIST] Race/ethnicity is categorized as: All races/ethnicities, Non-Hispanic (NH) White, NH Black, Asian/Pacific Islander, or Hispanic. "All races" includes all of the above, as well as other and unknown race/ethnicity and American Indian/Alaska Native. The latter two groups are not reported separately due to small numbers for many cancer sites. 
+                    <b>Race/Ethnicity:</b> Race/Ethnicity: Race/ethnicity is categorized as: All races/ethnicities, Non-Hispanic (NH) White, NH Black, or Hispanic. "All races" includes all of the above, as well as other and unknown race/ethnicity, Asian/Pacific Islander, and American Indian/Alaska Native. The latter two groups are not reported separately due to small numbers for many cancer sites in Delaware. 
                 </p>
                 <p>
                     <b>Racial/Ethnic Composition:</b> Distribution of residents’ race/ethnicity (e.g., % Hispanic, % non-Hispanic White, % non-Hispanic Black, % non-Hispanic Asian/Pacific Islander).<br>
@@ -500,18 +497,24 @@
                     <span class="source">Sources:</span> 
                 </p>
                 <ul class="source">
-                    <li>1-year time period: American Community Survey, 2012-2016</li>
-                    <li>5-year time period: American Community Survey, 2012-2016</li>
-                    <li>10-year time period: American Community Survey, 2007-2011 and 2012-2016</li>
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
+                </ul>
+                <p>
+                    <b>% With a Disability:</b> Percent of population with a disability.<br>
+                    <span class="source">Sources:</span> 
+                </p>
+                <ul class="source">
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
                 </ul>
                 <p>
                     <b>% Without Health Insurance:</b> Percent of population without health insurance.<br>
                     <span class="source">Sources:</span> 
                 </p>
                 <ul class="source">
-                    <li>1-year time period: American Community Survey, 2012-2016</li>
-                    <li>5-year time period: American Community Survey, 2012-2016</li>
-                    <li>10-year time period: American Community Survey, 2007-2011 and 2012-2016</li>
+                    <li>5-year time period: American Community Survey, 2015-2019</li>
+                    <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
                 </ul>
                 <!-- end of Definitions P items -->
             </div><!--/tab-pane -->
