typos with periods

--- a/src/index.html
+++ b/src/index.html
@@ -468,7 +468,7 @@
                     <li>10-year time period: American Community Survey, 2010-2014 and 2015-2019</li>
                 </ul>
                 <p>
-                    <b>% Foreign Born:</b> Percent of population that is foreign born<br>
+                    <b>% Foreign Born:</b> Percent of population that is foreign born.<br>
                     <span class="source">Sources:</span> 
                 </p>
                 <ul class="source">
@@ -635,7 +635,7 @@
         </div>
 
         <div aria-hidden="true" data-tooltip="Pct_forborn">
-            Percent of population that is foreign born..<br>
+            Percent of population that is foreign born.<br>
             <span class="source">Sources: 
                 <ul>
                     <li>5-year time period: American Community Survey, 2015-2019</li>
