typos with number of sites

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
     <div class="container noprint">
         <p class="intro-text">
-            Delaware Cancer Registry Cancer Maps is an interactive mapping tool of cancer data for 14 cancer reporting zones in Delaware. You can map cancer incidence for the 24 most common invasive cancer sites and filter by sex and race/ethnicity. <a class="btn btn-sm btn-alternate" id="visitlearn" href="#learn-text">Visit Learn</a> to review methodology, data sources, and more.
+            Delaware Cancer Registry Cancer Maps is an interactive mapping tool of cancer data for 14 cancer reporting zones in Delaware. You can map cancer incidence for the 23 most common invasive cancer sites and for all sites combined and filter by sex and race/ethnicity. <a class="btn btn-sm btn-alternate" id="visitlearn" href="#learn-text">Visit Learn</a> to review methodology, data sources, and more.
         </p>
     </div><!--/container section-->
 
@@ -352,7 +352,7 @@
                     </h2>
 
                     <div id="faq13" class="usa-accordion__content" hidden="">
-                        As we are reporting cancer incidence rates for small areas, the minimum reporting requirements allow us to report rates for the top 24 cancer sites.
+                        As we are reporting cancer incidence rates for small areas, the minimum reporting requirements allow us to report rates for the 23 most common invasive cancer sites and for all sites combined.
                     </div>
     
                     <h2 class="usa-accordion__heading">
