replaces 5 REPLACE sections

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
     <div class="container noprint">
         <p class="intro-text">
-            Delaware Cancer Registry Cancer Maps is an interactive mapping tool of cancer data for 14 cancer reporting zones in Delaware. You can map cancer incidence for the 23 most common invasive cancer sites and for all sites combined and filter by sex and race/ethnicity. <a class="btn btn-sm btn-alternate" id="visitlearn" href="#learn-text">Visit Learn</a> to review methodology, data sources, and more.
+            Delaware Cancer Registry Cancer Maps is an interactive mapping tool of cancer data for 15 cancer reporting zones in Delaware. You can map cancer incidence for the 23 most common invasive cancer sites and for all sites combined and filter by sex and race/ethnicity. <a class="btn btn-sm btn-alternate" id="visitlearn" href="#learn-text">Visit Learn</a> to review methodology, data sources, and more.
         </p>
     </div><!--/container section-->
 
@@ -280,7 +280,7 @@
                 </p>
                 <p class="title">Project Team</p>
                 <p>
-                    <a target="_blank" href="[REPLACE REGISTRY WEBSITE]">Delaware Cancer Registry</a>
+                    <a target="_blank" href="https://dhss.delaware.gov/dph/dcr/home.html">Delaware Cancer Registry</a>
                     <br/>
                     <a target="_blank" href="http://seer.cancer.gov">National Cancer Institute</a>
                     <br/>
@@ -288,7 +288,7 @@
                 </p>
                 <p class="title">Funding</p>
                 <p>
-                    <a target="_blank" href="[REPLACE FUNDING URL]">[REPLACE FUNDING SOURCE]</a>
+                    <a target="_blank" href="[REPLACE FUNDING URL]">The Delaware Cancer Registry is supported by the National Program of Cancer Registries (NPCR) of the Centers for Disease Control and Prevention (CDC), Delaware Cancer Consortium, and the Division of Public Health, Comprehensive Cancer Control Program.</a>
                     <br/>
                     <a target="_blank" href="http://seer.cancer.gov">National Cancer Institute</a>
                 </p>
@@ -342,7 +342,8 @@
                         </button>
                     </h2>
                     <div id="faq3" class="usa-accordion__content" hidden="">
-                        [REPLACE ABOUT BLURB]
+                        The Delaware Cancer Registry (DCR) collects information about new cancer cases, cancer treatment and cancer deaths. All hospitals, laboratories, physicians and other health care providers are required by state law to report all newly diagnosed or treated cancer cases to the Registry. Registry data is used to monitor cancer trends, promote research to increase survival, guide policy planning, and respond to Delaware residents’ cancer concerns. Patient information is kept absolutely confidential.
+For more information what cancer cases are reportable to the DCR, please visit: <a target="_blank" href="https://regulations.delaware.gov/AdminCode/title16/Department%20of%20Heal Delaware th%20and%20Social%20Services/Division%20of%20Public%20Health/Health%20Promotion%20and%20Disease%20Prevention/4201.pdf">pdf</a>
                     </div>
 
                     <h2 class="usa-accordion__heading">
@@ -532,7 +533,7 @@
                     This mapping tool is based on <a href="https://www.californiahealthmaps.org/">California Health Maps</a>, which is led by the Greater Bay Area Cancer Registry, University of California, San Francisco. Originally developed by <a href="https://www.greeninfo.org/" target="_blank">GreenInfo Network</a>,
                 </div>
                 <div class="col-sm-4 right small">
-                    [REPLACE CITATION INFO]
+                    Delaware Cancer Maps, based on November 2021 submission data: Delaware Cancer Registry, August 2023.
                 </div>
             </div>
         </div>
@@ -548,7 +549,7 @@
     <div id="tooltip_contents" tabindex="-1">
 	
         <div aria-hidden="true" data-tooltip="source">
-            Zone and statewide incidence data come from Delaware Cancer Registry. [REPLACE NATIONAL CANCER DATA SOURCE INFO].
+            Zone and statewide incidence data come from Delaware Cancer Registry. National Program of Cancer Registries and Surveillance, Epidemiology and End Results Program SEER*Stat Database: NPCR and SEER Incidence - U.S. Cancer Statistics Public Use Research Database, 2021 Submission (2001-2019). United States Department of Health and Human Services, Centers for Disease Control and Prevention and National Cancer Institute. Released June 2022. Accessed at <a target="_blank" href="https://www.cdc.gov/cancer/uscs/public-use">www.cdc.gov/cancer/uscs/public-use</a>.
         </div>		
         <div aria-hidden="true" data-tooltip="race">
             Race/ethnicity is categorized as: non-Hispanic White, non-Hispanic Black, and Hispanic. "All races" includes all of the above, as well as other and unknown race/ethnicity and American Indian/Alaska Native. The latter two groups are not reported separately due to small numbers for many cancer sites. 
