add url and took away funding urls

--- a/src/index.html
+++ b/src/index.html
@@ -290,11 +290,8 @@
                     <a target="_blank" href="https://www.westat.com/project/using-gis-interpret-spatial-context-and-cancer-risk">Westat, Inc.</a>
                 </p>
                 <p class="title">Funding</p>
-                <p>
-                    <a target="_blank" href="[REPLACE FUNDING URL]">The Delaware Cancer Registry is supported by the National Program of Cancer Registries (NPCR) of the Centers for Disease Control and Prevention (CDC), Delaware Cancer Consortium, and the Division of Public Health, Comprehensive Cancer Control Program.</a>
-                    <br/>
-                    <a target="_blank" href="http://seer.cancer.gov">National Cancer Institute</a>
-                </p>
+                <p>The Delaware Cancer Registry is supported by the National Program of Cancer Registries (NPCR) of the Centers for Disease Control and Prevention (CDC), Delaware Cancer Consortium, and the Division of Public Health, Comprehensive Cancer Control Program.</p>
+                <p>National Cancer Institute</p>
             </div><!--/tab-pane -->
             <div class="tab-pane container" id="learn-method">
                 <p>
@@ -379,7 +376,7 @@ For more information what cancer cases are reportable to the DCR, please visit: 
                         </button>
                     </h2>
                     <div id="faq4b" class="usa-accordion__content" hidden="">
-                        Zone and statewide incidence data come from Delaware Cancer Registry.  National Program of Cancer Registries and Surveillance, Epidemiology and End Results Program SEER*Stat Database: NPCR and SEER Incidence - U.S. Cancer Statistics Public Use Research Database, 2021 Submission (2001-2019). United States Department of Health and Human Services, Centers for Disease Control and Prevention and National Cancer Institute. Released June 2022. Accessed at www.cdc.gov/cancer/uscs/public-use.
+                        Zone and statewide incidence data come from Delaware Cancer Registry.  National Program of Cancer Registries and Surveillance, Epidemiology and End Results Program SEER*Stat Database: NPCR and SEER Incidence - U.S. Cancer Statistics Public Use Research Database, 2021 Submission (2001-2019). United States Department of Health and Human Services, Centers for Disease Control and Prevention and National Cancer Institute. Released June 2022. Accessed at <a target="_blank" href="https://www.cdc.gov/cancer/uscs/public-use">www.cdc.gov/cancer/uscs/public-use</a>.
                     </div>
                     <div id="faq5" class="usa-accordion__content" hidden="">
                         It takes several years for cancer incidence data for an entire population to be considered "complete," that is, when a cancer registry is confident that all new cases of cancer have been reported. Selected population sociodemographic data and population estimates for calculating cancer incidence rates are from the 2010 Census short form, the most recent year of complete census data. Additional sociodemographic data are from the 2012-2016 American Community Survey; although more current American Community Survey data are available, these years were selected to more closely correspond to the population estimate data used for calculating cancer incidence rates.
@@ -532,10 +529,10 @@ For more information what cancer cases are reportable to the DCR, please visit: 
     <footer class="footer noprint">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 left small">
+                <div class="col-sm-7 left small">
                     This mapping tool is based on <a href="https://www.californiahealthmaps.org/">California Health Maps</a>, which is led by the Greater Bay Area Cancer Registry, University of California, San Francisco. Originally developed by <a href="https://www.greeninfo.org/" target="_blank">GreenInfo Network</a>,
                 </div>
-                <div class="col-sm-4 right small">
+                <div class="col-sm-5 right small">
                     Delaware Cancer Maps, based on November 2021 submission data: Delaware Cancer Registry, August 2023.
                 </div>
             </div>
@@ -663,7 +660,7 @@ For more information what cancer cases are reportable to the DCR, please visit: 
                 <li>Use these data for health statistical reporting and analysis only.</li>
                 <li>Make no attempt to learn the identity of any person or establishment included in these data.</li>
                 <li>Make no attempt to link to cancer data released with other geographic areas.</li>
-                <li>Make no disclosure or other use of the identity of any person or establishment discovered inadvertently and advise the [Registry name] of any such discovery.</li>
+                <li>Make no disclosure or other use of the identity of any person or establishment discovered inadvertently and advise the Delaware Cancer Registry of any such discovery.</li>
             </ul>
             <p>By clicking the button below, I agree to these terms of use.</p>
             <div class="center">
