county option dropdown

--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,13 @@
                             <!-- see initDataFilters() where we create options based on constants in index.js -->
                         </select>
                     </div>
+
+                    <div class="input-group">
+                        <label for="data-filters-type">Area Type </label>
+                        <select name="type" id="data-filters-type" aria-label="Select area type to report">
+                            <!-- see initDataFilters() where we create options based on constants in index.js -->
+                        </select>
+                    </div>
                 </div>
             </div>
             <div class="col-md-7 col-lg-8">
