text for county vs zone displayed correctly

--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
             </thead>
             <tbody>
                 <tr data-region="cta">
-                    <th scope="row">Zone</th>
+                    <th scope="row" class="typeName">Zone</th>
                     <td class="center"><span data-region="cta" data-statistic="cases"></span></td>
                     <td class="center"><span data-region="cta" data-statistic="aair"></span> <span data-region="cta" data-statistic="lciuci"></span></span></td>
                     <td class="d-none d-md-table-cell ucilcicandlechartcell"><span class="ucilcicandlechart" data-region="cta"></span></td>
