--- a/src/index.html
+++ b/src/index.html
@@ -175,8 +175,10 @@
             <div class="col-md-7 col-lg-8">
                 <div class="printonly" id="logo-img-print" aria-hidden="true">
                     <img src="./static/ribbon_purple.png" alt="Health Maps Logo" />
-                    <h1 class="site-title-1" aria-label="Health Maps" tabindex="0">State Name</h1>
-                    <h1 class="site-title-2" aria-hidden="true">Health Maps</h1>
+                        <div style="display:block">
+                            <h1 class="site-title-1" aria-label="Health Maps" tabindex="0"><span class="stateName">[REPLACE STATE/REGISTRY]</span></h1>
+                            <h1 class="site-title-2" aria-hidden="true">Health Maps</h1>
+                        </div>
                 </div>
 
                 <div class="map" id="map" aria-hidden="true"></div>
