--- a/src/index.html
+++ b/src/index.html
@@ -436,13 +436,22 @@
                         the most current cancer incidence data as they become available, typically in the Spring of each
                         year.
                     </div>
-
                     <h2 class="usa-accordion__heading">
                         <button class="usa-accordion__button" aria-expanded="false" aria-controls="faq5">
-                            Why are cancer incidence data available only through 2016? Why are population
-                            sociodemographic data only reported for 2012-2016?
+                            Why are cancer incidence data available only through <span class="incidenceDateDate">[REPLACE INCIDENCE DATA DATE]</span>? Why are population
+                            sociodemographic data only reported for <span class="sociodemographicDataDateRange">[REPLACE SOCIODEMOGRAPHIC DATA DATE RANGE]</span>?
                         </button>
                     </h2>
+                    <div id="faq5" class="usa-accordion__content" hidden="">
+                        It takes several years for cancer incidence data for an entire population to be considered
+                        "complete," that is, when a cancer registry is confident that all new cases of cancer have been
+                        reported. Selected population sociodemographic data and population estimates for calculating
+                        cancer incidence rates are from the 2010 Census short form, the most recent year of complete
+                        census data. Additional sociodemographic data are from the <span class="sociodemographicDataDateRange">[REPLACE SOCIODEMOGRAPHIC DATA DATE RANGE]</span> American Community Survey;
+                        although more current American Community Survey data are available, these years were selected to
+                        more closely correspond to the population estimate data used for calculating cancer incidence
+                        rates.
+                    </div>
                     <h2 class="usa-accordion__heading">
                         <button class="usa-accordion__button" aria-expanded="false" aria-controls="faq4b">
                             What is the source of the cancer incidence data?
@@ -453,16 +462,7 @@
                             STATE/REGISTRY]</span> Cancer Registry. <span class="nationalCancerDataSource">[REPLACE
                             NATIONAL CANCER DATA SOURCE INFO]</span>
                     </div>
-                    <div id="faq5" class="usa-accordion__content" hidden="">
-                        It takes several years for cancer incidence data for an entire population to be considered
-                        "complete," that is, when a cancer registry is confident that all new cases of cancer have been
-                        reported. Selected population sociodemographic data and population estimates for calculating
-                        cancer incidence rates are from the 2010 Census short form, the most recent year of complete
-                        census data. Additional sociodemographic data are from the 2012-2016 American Community Survey;
-                        although more current American Community Survey data are available, these years were selected to
-                        more closely correspond to the population estimate data used for calculating cancer incidence
-                        rates.
-                    </div>
+                    
 
                     <h2 class="usa-accordion__heading">
                         <button class="usa-accordion__button" aria-expanded="false" aria-controls="faq6">
