took out language

--- a/src/index.html
+++ b/src/index.html
@@ -488,12 +488,11 @@
                     <h2 class="usa-accordion__heading">
                         <button class="usa-accordion__button" aria-expanded="false" aria-controls="faq9">
                             Why are data not available for other or more granular racial/ethnic groups (e.g., American
-                            Indians, Asian or Latinx ethnic groups) or non-binary genders?
+                            Indians, Asian or Latinx ethnic groups)?
                         </button>
                     </h2>
                     <div id="faq9" class="usa-accordion__content" hidden="">
-                        We have not reported small-area level cancer incidence data for smaller racial/ethnic groups or
-                        non-binary genders due to small cancer case counts and population estimates at the zone levels
+                        We have not reported small-area level cancer incidence data for smaller racial/ethnic groups due to small cancer case counts and population estimates at the zone levels
                         to ensure confidentiality and stable statistical rates. In addition, at this time, some of these
                         data are not consistently collected within the <span class="stateName">[REPLACE
                             STATE/REGISTRY]</span> Cancer Registry nor available in population estimate data.
