hover title change on download data

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
 
                 <div id="downloadoptions" class="d-none" aria-expanded="false">
                     <a href="javascript:void(0);" data-export="map" title="Download a PNG image of the map"><i class="fa fa-map"></i> Map</a>
-                    <a href="javascript:void(0);" data-export="data" title="data"><i class="fa fa-table"></i> Data</a>
+                    <a href="javascript:void(0);" data-export="data" title="Download data associated with the tool"><i class="fa fa-table"></i> Data</a>
                 </div>
 
                 <button class="btn btn-alternate" id="printpagebutton" onClick="window.print();"><i
