added more * in place of no data, small text change

--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
                 <tr>
                     <th class="left"></th>
                     <th scope="col">Cases</th>
-                    <th scope="col" colspan="2">Age Adjusted Incidence Rate (95% LCI, 95% UCI) <i
+                    <th scope="col" colspan="2">Age-Adjusted Incidence Rates (95% LCI, 95% UCI) <i
                             class="fa fa-info-circle"  data-tooltip="aaircitable"></i></th>
                 </tr>
             </thead>
